tests/examples/py_simple/compiler_error/solution.py
def add(a, b)
    return a + b # Missing colon after function signature
